Tech Stack Icons

--- a/index.css
+++ b/index.css
@@ -35,6 +35,15 @@ p {
 .text--purple {
     color: #6030b1;
 }
+.container {
+    padding: 50px 0;
+}
+section:nth-child(even) {
+    background-color: #f8f8f8;
+}
+.section__title {
+    margin-bottom: 20px;
+}
 /* Navigation */
 
 nav{
@@ -125,5 +134,24 @@ nav{
 
 }
 .about-me__image {
+    width: 100%;
+}
+
+/*Stack*/
+
+.language__img {
+    width: 100%;
+    max-width: 100px;
+}
+.language {
+    width: 25%;
+}
+.language__img--wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+}
+.language__list {
+    display: flex;
     width: 100%;
 }
